# challenge

./: .flake8  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 3590a8e090f4_create_models.py
challenge/: main.py
challenge/controllers/api_v1/: segment.py  tag.py  user.py
challenge/core/: settings.py
challenge/db/: base.py  base_class.py  deps.py  session.py
challenge/dto/: segment.py  tag.py  user.py
challenge/models/: segment.py  tag.py  user.py
challenge/repositories/: base.py  segment.py  tag.py  user.py
challenge/router/: router.py
challenge/services/: segment.py  tag.py  user.py
challenge/tests/: conftest.py  segment_test.py  tag_test.py  user_test.py
