[tool.poetry]
name = "challenge"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.7.5"
SQLAlchemy = "^1.4.28"
psycopg2 = "^2.9.2"
fastapi = "^0.70.0"
uvicorn = "^0.16.0"
pylint = "^2.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
